[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-api-toolkit"
version = "0.1.0"
description = "Production-grade FastAPI toolkit: circuit breaker, retry, rate limit, bulkhead, idempotency, observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api_toolkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
